fix: add flex display to button styles for improved alignment

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -137,12 +137,12 @@
   }
 
   .button {
-    @apply w-fit items-center gap-2 bg-rose-600 font-normal text-white duration-200 hover:font-bold;
+    @apply flex w-fit items-center gap-2 bg-rose-600 font-normal text-white duration-200 hover:font-bold;
     @apply px-2 py-2 md:py-3 lg:px-3 lg:py-4;
   }
 
   .button-white {
-    @apply w-fit bg-white font-normal text-black duration-200 hover:font-bold;
+    @apply flex w-fit bg-white font-normal text-black duration-200 hover:font-bold;
     @apply px-2 py-2 md:py-3 lg:px-3 lg:py-4;
   }
 }
